[package]
name = "libg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-select = "0.1.1"
unhtml = { version = "0.8.0", features = ["derive"] }

[dependencies.reqwest]
version = "0.11.26"
features = ["blocking"]
