[package]
name = "libg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
scraper = "0.19.0"

[dependencies.reqwest]
version = "0.11.26"
features = ["blocking"]
