[package]
name = "libg-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
scraper = "0.19.0"
indicatif = "0.17.8"
futures-util = "0.3.30"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10.4"

[dependencies.reqwest]
version = "0.11.26"
features = ["blocking", "stream"]
